bug fixed form center aligned, form labels positioned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,18 +125,15 @@ h2 {
 }
 
 input[required]{
-  width: 60%;
-  display: block;
+    width: 60%;
+    display: block;
+    margin: auto;
 
 }
-
-form { align-content:;
-       text-align:
-  
-
-
+.form-label {
+    margin-left: 20%;
 }
-
-.btn-submit {margin: 30px 100px;
+.btn-submit {margin: 30px 430px;
+            
 
 }
